--- a/src/_layouts/layout.html
+++ b/src/_layouts/layout.html
@@ -39,13 +39,8 @@
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
-                        <li{% if page.url == "/index.html" %} class="active"{% endif %}><a href="index.html">Home</a></li>
-                        <li{% if page.url == "/verein.html" %} class="active"{% endif %}><a href="verein.html">Verein</a></li>
-                        <li{% if page.url == "/vereinstaetigkeit.html" %} class="active"{% endif %}><a href="vereinstaetigkeit.html">Vereinstätigkeit</a></li>
-                        <li{% if page.url == "/projektberichte.html" %} class="active"{% endif %}><a href="projektberichte.html">Projektberichte</a></li>
-                        <li{% if page.url == "/kontakt.html" %} class="active"{% endif %}><a href="kontakt.html">Kontakt</a></li>
-                        <li{% if page.url == "/spenden.html" %} class="active"{% endif %}><a href="spenden.html">Spenden</a></li>
-                    </ul>
+{% assign navigation_pages = site.pages | sort: 'navigation_weight' %}{% for p in navigation_pages %}{% if p.navigation_weight %}                      <li{% if p.url == page.url %} class="active"{% endif %}><a href="{{ p.url }}">{% if p.url == "/index.html" %}Home{% else %}{{ p.title }}{% endif %}</a></li>
+{% endif %}{% endfor %}                    </ul>
                 </div>
             </div>
         </div>
