--- a/src/_layouts/gallery.html
+++ b/src/_layouts/gallery.html
@@ -20,26 +20,25 @@ layout: layout
           <div class="col-lg-12">
             <ul class="portfolio-categ filter">
               <li class="all active"><a href="#">Alle</a></li>
-              <li class="schulung2018"><a href="#" title="">Schulungen 2018</a></li>
-              <li class="schulung2016"><a href="#" title="">Schulungen 2016</a></li>
-            </ul>
+{% for collection in page.collections %}              <li class="{{collection.id}}"><a href="#" title="">{{collection.title}}</a></li>
+{% endfor %}            </ul>
             <div class="clearfix">
             </div>
             <div class="row">
               <section id="projects">
                 <ul id="thumbs" class="portfolio">
-{% assign no = 0 %}{% for image in page.images %}                  <!-- Item Project and Filter Name -->
-                  <li class="item-thumbs col-lg-3 photography" data-id="id-{{ no }}" data-type="{{image.collection}}">
+{% assign no = 0 %}{% for collection in page.collections %}{% for image in collection.images %}                  <!-- Item Project and Filter Name -->
+                  <li class="item-thumbs col-lg-3 photography" data-id="id-{{ no }}" data-type="{{collection.id}}">
                     <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                    <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="{{image.title}}" href="{{image.src}}">
+                    <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="{{image.title}}" href="{{page.base_src}}/{{collection.src}}/{{image.src}}">
                       <span class="overlay-img"></span>
                       <span class="overlay-img-thumb font-icon-plus"></span>
                     </a>
                     <!-- Thumb Image and Description -->
-                    <img src="{{image.src}}" alt="{{image.text}}">
+                    <img src="{{page.base_src}}/{{collection.src}}/{{image.src}}" alt="{{image.text}}">
                   </li>
                   <!-- End Item Project -->
-{% assign no = no | plus:1 %}{% endfor %}                </ul>
+{% assign no = no | plus:1 %}{% endfor %}{% endfor %}                </ul>
               </section>
             </div>
           </div>
