--- a/src/_layouts/gallery.html
+++ b/src/_layouts/gallery.html
@@ -15,19 +15,18 @@ layout: layout
       </div>
     </section>
     <section id="content">
-      <div class="container">
+      {% assign no = 0 %}{% for collection in page.collections %}      <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <ul class="portfolio-categ filter">
-              <li class="all active"><a href="#">Alle</a></li>
-{% for collection in page.collections %}              <li class="{{collection.id}}"><a href="#" title="">{{collection.title}}</a></li>
-{% endfor %}            </ul>
-            <div class="clearfix">
-            </div>
+            <h2>{{collection.title}}</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
             <div class="row">
               <section id="projects">
                 <ul id="thumbs" class="portfolio">
-{% assign no = 0 %}{% for collection in page.collections %}{% for image in collection.images %}                  <!-- Item Project and Filter Name -->
+{% for image in collection.images %}                  <!-- Item Project and Filter Name -->
                   <li class="item-thumbs col-lg-3 photography" data-id="id-{{ no }}" data-type="{{collection.id}}">
                     <!-- Fancybox - Gallery Enabled - Title - Full Image -->
                     <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="{{image.title}}" href="{{page.base_src}}/{{collection.src}}/{{image.src}}">
@@ -38,10 +37,10 @@ layout: layout
                     <img src="{{page.base_src}}/{{collection.src}}/{{image.src}}" alt="{{image.text}}">
                   </li>
                   <!-- End Item Project -->
-{% assign no = no | plus:1 %}{% endfor %}{% endfor %}                </ul>
+{% assign no = no | plus:1 %}{% endfor %}                </ul>
               </section>
             </div>
           </div>
         </div>
       </div>
-    </section>
+{% endfor %}    </section>
