Added Datenschutzerklärung; changed piwik to matomo

--- a/src/_layouts/layout.html
+++ b/src/_layouts/layout.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 <div id="wrapper">
-	<!-- start header -->
-	<header>
+    <!-- start header -->
+    <header>
         <div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
@@ -44,30 +44,43 @@
                 </div>
             </div>
         </div>
-	</header>
-	<!-- end header -->
+    </header>
+    <!-- end header -->
 {{content}}
-	<footer>
-	<div id="sub-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
-						<p>
-							<span>Design base on template <a href="http://bootstraptaste.com/free-bootstrap-template-corporate-moderna/">Moderna</a> by </span><a href="http://bootstraptaste.com" target="_blank">Bootstraptaste</a>
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="https://www.facebook.com/belarusdiabetes" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://twitter.com/BelarusDiabetes" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	</footer>
+    <footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="widget">
+                    <div class="gdpr">
+                        <p>
+                            <a href="datenschutz.html">Datenschutzerklärung</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="sub-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="copyright">
+                        <p>
+                            <span>Design based on template <a href="https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/">Moderna</a> designed by </span><a href="https://bootstrapmade.com" target="_blank">BootstrapMade</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="social-network">
+                        <li><a href="https://www.facebook.com/belarusdiabetes" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/BelarusDiabetes" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    </footer>
 </div>
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 <!-- javascript
@@ -85,20 +98,20 @@
 <script src="js/animate.js"></script>
 <script src="js/custom.js"></script>
 {% if page.validate %}<script src="js/validate.js"></script>
-{% endif %}<!-- Piwik -->
+{% endif %}<!-- Matomo -->
 <script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//piwik.rolandbaer.ch/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    var u="//matomo.belarus-affoltern.ch/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
     _paq.push(['setSiteId', 3]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//piwik.rolandbaer.ch/piwik.php?idsite=3" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
+<noscript><p><img src="//matomo.belarus-affoltern.ch/matomo.php?idsite=3" style="border:0;" alt="" /></p></noscript>
+<!-- End Matomo Code -->
 </body>
 </html>
