Technical improvements: - loading fonts from own server - tracking Content Security Policy compatible - CSP meta information - removed loading of not needed and not available style sheet

--- a/src/_layouts/layout.html
+++ b/src/_layouts/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://matomo.belarus-affoltern.ch; script-src 'self' http://matomo.belarus-affoltern.ch; img-src 'self' https://matomo.belarus-affoltern.ch; style-src 'self' 'unsafe-inline'; frame-ancestors 'self'; frame-src 'self';">
 <meta charset="utf-8">
 <title>Belarus Affoltern - {{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +10,6 @@
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-<link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
 <link href="/favicon.ico" rel="icon" type="image/vnd.microsoft.icon">
@@ -99,18 +99,8 @@
 <script src="js/custom.js"></script>
 {% if page.validate %}<script src="js/validate.js"></script>
 {% endif %}<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//matomo.belarus-affoltern.ch/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', 3]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
+<script src="js/tracking.js"></script>
+<script src="https://matomo.belarus-affoltern.ch/matomo.js" async defer></script>
 <noscript><p><img src="//matomo.belarus-affoltern.ch/matomo.php?idsite=3" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
 </body>
