--- a/src/_layouts/layout.html
+++ b/src/_layouts/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://matomo.belarus-affoltern.ch; script-src 'self' http://matomo.belarus-affoltern.ch; img-src 'self' https://matomo.belarus-affoltern.ch; style-src 'self' 'unsafe-inline'; frame-ancestors 'self'; frame-src 'self';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src https://matomo.belarus-affoltern.ch; script-src 'self' http://matomo.belarus-affoltern.ch; img-src 'self' https://matomo.belarus-affoltern.ch; style-src 'self' 'unsafe-inline'; frame-ancestors 'self'; frame-src 'self' https://matomo.belarus-affoltern.ch;">
 <meta charset="utf-8">
 <title>Belarus Affoltern - {{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
