--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,12 @@ img.img-polaroid {
 /* --- header -- */
 
 
+header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
 header .navbar {
     margin-bottom: 0;
 }
@@ -126,7 +132,7 @@ header .navbar-collapse  ul.navbar-nav {
 }
 
 header .navbar-default{
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
 header .nav li a:hover,
